--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,10 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-
-# 	- password: java.lang.String = "$2a$05$jCBJ1otILqZC.P7LJs0sXu6Uxs9flD4DtoTrBTZM/w38TfCRrPgpa"
-# 	- password: java.lang.String = "$2a$05$p7cLI0SefDutw5gdUWiB3OR9SoSH0UIIerD8puBRrxleHNP8pRzF."
-
+# 	- password: java.lang.String = "$2a$05$hzpF7V6eAyQt17t2luOU6eiI6jkkG.FEPTqzZdeIpOdQnr5A25SLa"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -46,11 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-
-# 	- password: java.lang.String = "$2a$05$MLgEYcHdI0oYLaubYppvYO3dbcCnT9OJjK70BMzHeQOJSQrkR3w1W"
-
-# 	- password: java.lang.String = "$2a$05$6TH5wUWw3Rl4P24qvJTHouYw1qHNHdxBKHFvnVOOgKN3/Fkdvtssm"
-
+# 	- password: java.lang.String = "$2a$05$RvYLMvVCJ6JJtZta4bSFDeaCRIE5SP7ncKctWolHW7aOz.oCh2KM6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -132,32 +125,14 @@ announcement03=8
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
 
-
-invRecord01=9
-
-# acme.entities.investorRecords.InvestorRecord{id=9, version=0}
-
 requests01=9
 
 # acme.entities.requestss.Requests{id=9, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 9
 # 	- version: int = 0
-
-# 	from acme.entities.investorRecords.InvestorRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Ozimandias"
-# 	- sector: java.lang.String = "Construction"
-# 	- invStatement: java.lang.String = "Currently active"
-# 	- stars: java.lang.Integer = 4
-
-invRecord02=10
-
-# acme.entities.investorRecords.InvestorRecord{id=10, version=0}
-
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 01"
@@ -170,24 +145,11 @@ invRecord02=10
 requests02=10
 
 # acme.entities.requestss.Requests{id=10, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 10
 # 	- version: int = 0
-
-# 	from acme.entities.investorRecords.InvestorRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Lord Ainz"
-# 	- sector: java.lang.String = "World Domination"
-# 	- invStatement: java.lang.String = "Currently really really active"
-# 	- stars: java.lang.Integer = 5
-
-invRecord03=11
-
-# acme.entities.investorRecords.InvestorRecord{id=11, version=0}
-
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 02"
@@ -200,20 +162,11 @@ invRecord03=11
 requests03=11
 
 # acme.entities.requestss.Requests{id=11, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 11
 # 	- version: int = 0
-
-# 	from acme.entities.investorRecords.InvestorRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Prince Eugene"
-# 	- sector: java.lang.String = "Harbory"
-# 	- invStatement: java.lang.String = "First time investing"
-# 	- stars: java.lang.Integer = null
-
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 03"
@@ -311,4 +264,49 @@ challenge03=16
 # 	- rewardGold: acme.framework.datatypes.Money = <<€ 500.00>>
 # 	- rewardSilver: acme.framework.datatypes.Money = <<€ 250.00>>
 # 	- rewardBronze: acme.framework.datatypes.Money = <<€ 100.00>>
+
+invRecord01=17
+
+# acme.entities.investorRecords.InvestorRecord{id=17, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 17
+# 	- version: int = 0
+# 	from acme.entities.investorRecords.InvestorRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Ozimandias"
+# 	- sector: java.lang.String = "Construction"
+# 	- invStatement: java.lang.String = "Currently active"
+# 	- stars: java.lang.Integer = 4
+
+invRecord02=18
+
+# acme.entities.investorRecords.InvestorRecord{id=18, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 18
+# 	- version: int = 0
+# 	from acme.entities.investorRecords.InvestorRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Lord Ainz"
+# 	- sector: java.lang.String = "World Domination"
+# 	- invStatement: java.lang.String = "Currently really really active"
+# 	- stars: java.lang.Integer = 5
+
+invRecord03=19
+
+# acme.entities.investorRecords.InvestorRecord{id=19, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 19
+# 	- version: int = 0
+# 	from acme.entities.investorRecords.InvestorRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Prince Eugene"
+# 	- sector: java.lang.String = "Harbory"
+# 	- invStatement: java.lang.String = "First time investing"
+# 	- stars: java.lang.Integer = null
 
