--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$sLhHEihr10Adu7KHQB44auTuni6OOkOVmCxhXj0nbP7IkAGKxpiYm"
+# 	- password: java.lang.String = "$2a$05$HkpA99yGuSnwyK3sgscq2Oswa285gv5dbxD1O4lOo6a5a2KJF7QAK"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$aaM4eqYwwIySwquuH2WNoOCpLJQSG5uTwJGdmijBB/97kTAzQfzbW"
+# 	- password: java.lang.String = "$2a$05$9ST2ffPELAdbacMeaUEZw.qGTtM5ytZVeiYLJRj/Q.yWs0k9H1AyK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
