--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,11 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-
-# 	- password: java.lang.String = "$2a$05$hzpF7V6eAyQt17t2luOU6eiI6jkkG.FEPTqzZdeIpOdQnr5A25SLa"
-
-# 	- password: java.lang.String = "$2a$05$HkpA99yGuSnwyK3sgscq2Oswa285gv5dbxD1O4lOo6a5a2KJF7QAK"
-
+# 	- password: java.lang.String = "$2a$05$/uAinaB6OsWf7QRVfY/CB.bWlhOp63d8XTEB06EXtaqivK2qQq5s6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -47,11 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-
-# 	- password: java.lang.String = "$2a$05$RvYLMvVCJ6JJtZta4bSFDeaCRIE5SP7ncKctWolHW7aOz.oCh2KM6"
-
-# 	- password: java.lang.String = "$2a$05$9ST2ffPELAdbacMeaUEZw.qGTtM5ytZVeiYLJRj/Q.yWs0k9H1AyK"
-
+# 	- password: java.lang.String = "$2a$05$mdrwhGZldiITm5SkU/LYROhFZBlaWtZNCo8QmZUqQ6F1/la4MfcD6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -85,17 +77,9 @@ administratorAuthenticated=5
 # 	from acme.framework.entities.Authenticated:
 # 	- serialVersionUID: long = 1
 
-
-# ./src/main/population/sample-data.xml
-
-announcement01=6
-
-# acme.entities.announcements.Announcement{id=6, version=0}
-
 customisationParameter01=6
 
 # acme.entities.customisationParameters.CustomisationParameter{id=6, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
@@ -106,395 +90,4 @@ customisationParameter01=6
 # 	- spamWordsEn: java.lang.String = "sex,hard core,viagra,cialis,nigeria,you've won,million dollar"
 # 	- spamWordsEs: java.lang.String = "sexo,hard core,viagra,cialis,nigeria,has ganado,millon de dolares"
 # 	- threshold: java.lang.Double = 1.0
-
-
-# ./src/main/population/sample-data.xml
-
-announcement01=7
-
-# acme.entities.announcements.Announcement{id=7, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 7
-# 	- version: int = 0
-# 	from acme.entities.announcements.Announcement:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Sample announcement 01"
-# 	- moment: java.util.Date = <<Mon Nov 04 10:35:00 CET 2019>>
-# 	- moreInfo: java.lang.String = null
-# 	- text: java.lang.String = "This is the description of a sample announcement"
-
-
-announcement02=7
-
-# acme.entities.announcements.Announcement{id=7, version=0}
-
-announcement02=8
-
-# acme.entities.announcements.Announcement{id=8, version=0}
-
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 8
-# 	- version: int = 0
-# 	from acme.entities.announcements.Announcement:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Sample announcement 02"
-# 	- moment: java.util.Date = <<Mon Jun 10 00:00:00 CEST 2019>>
-# 	- moreInfo: java.lang.String = "http://ww.example.com"
-# 	- text: java.lang.String = "This is the description of another announcement"
-
-
-announcement03=8
-
-# acme.entities.announcements.Announcement{id=8, version=0}
-
-announcement03=9
-
-# acme.entities.announcements.Announcement{id=9, version=0}
-
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 9
-# 	- version: int = 0
-# 	from acme.entities.announcements.Announcement:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Sample very old announcement 03"
-# 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
-# 	- moreInfo: java.lang.String = "http://ww.example.com"
-# 	- text: java.lang.String = "This is a very old announcement"
-
-
-requests01=9
-
-# acme.entities.requestss.Requests{id=9, version=0}
-
-Solicit01=10
-
-# acme.entities.solicits.Solicit{id=10, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 10
-# 	- version: int = 0
-# 	from acme.entities.requestss.Requests:
-
-# 	from acme.entities.solicits.Solicit:
-
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Request 01"
-# 	- moment: java.util.Date = <<Mon Jun 10 10:35:00 CEST 2019>>
-# 	- deadline: java.util.Date = <<Sun Jun 30 10:35:00 CEST 2019>>
-# 	- text: java.lang.String = "This is the description of a request"
-# 	- reward: acme.framework.datatypes.Money = <<€ 9000.00>>
-# 	- ticker: java.lang.String = "RABCD-12345"
-
-
-requests02=10
-
-# acme.entities.requestss.Requests{id=10, version=0}
-
-Solicit02=11
-
-# acme.entities.solicits.Solicit{id=11, version=0}
-
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 11
-# 	- version: int = 0
-
-# 	from acme.entities.requestss.Requests:
-
-# 	from acme.entities.solicits.Solicit:
-
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Request 02"
-# 	- moment: java.util.Date = <<Tue Jul 10 10:35:00 CEST 2018>>
-# 	- deadline: java.util.Date = <<Sun Jul 29 10:35:00 CEST 2018>>
-# 	- text: java.lang.String = "This is the description of a request"
-# 	- reward: acme.framework.datatypes.Money = <<€ 2000.00>>
-# 	- ticker: java.lang.String = "RABCD-12346"
-
-
-requests03=11
-
-# acme.entities.requestss.Requests{id=11, version=0}
-
-Solicit03=12
-
-# acme.entities.solicits.Solicit{id=12, version=0}
-
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 12
-# 	- version: int = 0
-
-# 	from acme.entities.requestss.Requests:
-
-# 	from acme.entities.solicits.Solicit:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Request 03"
-# 	- moment: java.util.Date = <<Tue Jan 15 10:35:00 CET 2019>>
-# 	- deadline: java.util.Date = <<Thu Jan 17 12:00:00 CET 2019>>
-# 	- text: java.lang.String = "This is the description of a request"
-# 	- reward: acme.framework.datatypes.Money = <<€ 10000.00>>
-# 	- ticker: java.lang.String = "REBCD-62345"
-
-
-offer01=12
-
-# acme.entities.offers.Offer{id=12, version=0}
-
-offer01=13
-
-# acme.entities.offers.Offer{id=13, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 13
-# 	- version: int = 0
-# 	from acme.entities.offers.Offer:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = " Offer 1"
-# 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
-# 	- deadline: java.util.Date = <<Wed Jun 10 19:10:00 CEST 2026>>
-# 	- text: java.lang.String = "This is a offer's text"
-# 	- maxMoney: acme.framework.datatypes.Money = <<€ 800.00>>
-# 	- minMoney: acme.framework.datatypes.Money = <<€ 700.00>>
-# 	- ticker: java.lang.String = "OABCD-12345"
-# 	- rango: java.lang.String = null
-
-
-offer02=13
-
-# acme.entities.offers.Offer{id=13, version=0}
-
-offer02=14
-
-# acme.entities.offers.Offer{id=14, version=0}
-
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 14
-# 	- version: int = 0
-# 	from acme.entities.offers.Offer:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = " Offer 2"
-# 	- moment: java.util.Date = <<Wed Jun 10 19:10:00 CEST 2015>>
-# 	- deadline: java.util.Date = <<Mon Jun 10 19:10:00 CEST 2024>>
-# 	- text: java.lang.String = "This is a offer's text"
-# 	- maxMoney: acme.framework.datatypes.Money = <<€ 150.00>>
-# 	- minMoney: acme.framework.datatypes.Money = <<€ 50.00>>
-# 	- ticker: java.lang.String = "OFGHI-67891"
-# 	- rango: java.lang.String = null
-
-
-challenge01=14
-
-# acme.entities.challenges.Challenge{id=14, version=0}
-
-challenge01=15
-
-# acme.entities.challenges.Challenge{id=15, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 15
-# 	- version: int = 0
-# 	from acme.entities.challenges.Challenge:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Challenge 01"
-# 	- description: java.lang.String = "Description 01"
-# 	- deadline: java.util.Date = <<Sun Jun 10 19:10:00 CEST 2029>>
-# 	- rewardGold: acme.framework.datatypes.Money = <<€ 1000.00>>
-# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 750.00>>
-# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 500.00>>
-
-
-challenge02=15
-
-# acme.entities.challenges.Challenge{id=15, version=0}
-
-challenge02=16
-
-# acme.entities.challenges.Challenge{id=16, version=0}
-
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 16
-# 	- version: int = 0
-# 	from acme.entities.challenges.Challenge:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Challenge 02"
-# 	- description: java.lang.String = "Description 02"
-# 	- deadline: java.util.Date = <<Thu Jun 10 19:10:00 CEST 2021>>
-# 	- rewardGold: acme.framework.datatypes.Money = <<€ 2000.00>>
-# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 1500.00>>
-# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 1000.00>>
-
-
-challenge03=16
-
-# acme.entities.challenges.Challenge{id=16, version=0}
-
-challenge03=17
-
-# acme.entities.challenges.Challenge{id=17, version=0}
-
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 17
-# 	- version: int = 0
-# 	from acme.entities.challenges.Challenge:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Challenge 03"
-# 	- description: java.lang.String = "Description 03"
-# 	- deadline: java.util.Date = <<Tue Jun 10 19:10:00 CEST 2025>>
-# 	- rewardGold: acme.framework.datatypes.Money = <<€ 500.00>>
-# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 250.00>>
-# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 100.00>>
-
-
-invRecord01=17
-
-# acme.entities.investorRecords.InvestorRecord{id=17, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 17
-
-invRecord01=18
-
-# acme.entities.investorRecords.InvestorRecord{id=18, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 18
-
-# 	- version: int = 0
-# 	from acme.entities.investorRecords.InvestorRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Ozimandias"
-# 	- sector: java.lang.String = "Construction"
-# 	- invStatement: java.lang.String = "Currently active"
-# 	- stars: java.lang.Integer = 4
-
-
-invRecord02=18
-
-# acme.entities.investorRecords.InvestorRecord{id=18, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 18
-
-invRecord02=19
-
-# acme.entities.investorRecords.InvestorRecord{id=19, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 19
-
-# 	- version: int = 0
-# 	from acme.entities.investorRecords.InvestorRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Lord Ainz"
-# 	- sector: java.lang.String = "World Domination"
-# 	- invStatement: java.lang.String = "Currently really really active"
-# 	- stars: java.lang.Integer = 5
-
-
-invRecord03=19
-
-# acme.entities.investorRecords.InvestorRecord{id=19, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 19
-
-invRecord03=20
-
-# acme.entities.investorRecords.InvestorRecord{id=20, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 20
-# 	- version: int = 0
-# 	from acme.entities.investorRecords.InvestorRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Prince Eugene"
-# 	- sector: java.lang.String = "Harbory"
-# 	- invStatement: java.lang.String = "First time investing"
-# 	- stars: java.lang.Integer = null
-
-
-
-companyRecord01=21
-
-# acme.entities.companyRecords.CompanyRecord{id=21, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 21
-# 	- version: int = 0
-# 	from acme.entities.companyRecords.CompanyRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Solutia"
-# 	- sector: java.lang.String = "Sector 1"
-# 	- ceo: java.lang.String = "CEO 1"
-# 	- description: java.lang.String = "Description 1"
-# 	- webSite: java.lang.String = "https://gruposolutia.com/"
-# 	- phone: java.lang.String = "(9557) 922051"
-# 	- email: java.lang.String = "romangutierrez@hotmail.com"
-# 	- isIncorporated: java.lang.Boolean = false
-# 	- numberStars: java.lang.Integer = 0
-
-companyRecord02=22
-
-# acme.entities.companyRecords.CompanyRecord{id=22, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 22
-# 	- version: int = 0
-# 	from acme.entities.companyRecords.CompanyRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Alveys Chocolates"
-# 	- sector: java.lang.String = "Sector 2"
-# 	- ceo: java.lang.String = "CEO 2"
-# 	- description: java.lang.String = "Description 2"
-# 	- webSite: java.lang.String = "https://www.alveyschocolates.com/"
-# 	- phone: java.lang.String = "+34 (6035) 527401"
-# 	- email: java.lang.String = "antoniovidaldimision@gmail.com"
-# 	- isIncorporated: java.lang.Boolean = true
-# 	- numberStars: java.lang.Integer = 2
-
-companyRecord03=23
-
-# acme.entities.companyRecords.CompanyRecord{id=23, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 23
-# 	- version: int = 0
-# 	from acme.entities.companyRecords.CompanyRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Acme-Jobs"
-# 	- sector: java.lang.String = "Sector 3"
-# 	- ceo: java.lang.String = "CEO 3"
-# 	- description: java.lang.String = "Description 3"
-# 	- webSite: java.lang.String = "https://google.com/"
-# 	- phone: java.lang.String = "+999 (4387) 4576329871"
-# 	- email: java.lang.String = "antonioromerocaceres@gmail.com"
-# 	- isIncorporated: java.lang.Boolean = false
-# 	- numberStars: java.lang.Integer = 5
 
